
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ sin6_scope_id; scalar_t__ sin6_flowinfo; int sin6_addr; int sin6_port; int sin6_family; } ;
struct dccp_handle {int s1; TYPE_1__ sa; void* s2; } ;


 int AF_INET6 ;
 int EXIT_FAILURE ;
 int IPPROTO_IP ;
 int PF_INET6 ;
 int SOCK_DCCP ;
 int bind (int,TYPE_1__*,int) ;
 int connect (void*,TYPE_1__*,int) ;
 int exit (int ) ;
 int htons (int) ;
 int inet_pton (int ,char*,int *) ;
 int listen (int,int) ;
 int perror (char*) ;
 void* socket (int ,int ,int ) ;

void dccp_connect_pad(struct dccp_handle *handle, int port) {
 handle->sa.sin6_family = AF_INET6;
 handle->sa.sin6_port = htons(port);
 inet_pton(AF_INET6, "::1", &handle->sa.sin6_addr);
 handle->sa.sin6_flowinfo = 0;
 handle->sa.sin6_scope_id = 0;

 handle->s1 = socket(PF_INET6, SOCK_DCCP, IPPROTO_IP);
 if (handle->s1 == -1) {
  perror("socket(SOCK_DCCP)");
  exit(EXIT_FAILURE);
 }

 int rv = bind(handle->s1, &handle->sa, sizeof(handle->sa));
 if (rv != 0) {
  perror("bind()");
  exit(EXIT_FAILURE);
 }

 rv = listen(handle->s1, 0x9);
 if (rv != 0) {
  perror("listen()");
  exit(EXIT_FAILURE);
 }

 handle->s2 = socket(PF_INET6, SOCK_DCCP, IPPROTO_IP);
 if (handle->s1 == -1) {
  perror("socket(SOCK_DCCP)");
  exit(EXIT_FAILURE);
 }

 rv = connect(handle->s2, &handle->sa, sizeof(handle->sa));
 if (rv != 0) {
  perror("connect(SOCK_DCCP)");
  exit(EXIT_FAILURE);
 }
}
